--- a/static/preview-cat21.css
+++ b/static/preview-cat21.css
@@ -11,8 +11,3 @@ body {
   height: 100%;
   margin: 0;
 }
-
-svg {
-  width: 100%;
-  height: 100%;
-}
